<resources>
    <string name="app_name">Calculadora</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="bienvenido2">Bienvenido2</string>
    <string name="ac">AC</string>
    <string name="del">Del</string>
    <string name="porcentaje">%</string>
    <string name="entre">/</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="multiplicacion">*</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="menos">-</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="mas">+</string>
    <string name="dobleCero">00</string>
    <string name="cero">0</string>
    <string name="punto">.</string>
    <string name="resultado">=</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="rad">rad</string>
    <string name="deg">deg</string>
    <string name="inv">inv</string>
    <string name="log">log</string>
    <string name="in">In</string>
    <string name="factorial">!</string>
    <string name="pi">π</string>
    <string name="euler">e</string>
    <string name="potencia">^</string>
    <string name="raiz">√</string>
    <string name="AbrirParentesis">(</string>
    <string name="CerrarParentesis">)</string>
    <!-- Invert Text -->
    <string name="asin">sin⁻¹</string>
    <string name="acos">cos⁻¹</string>
    <string name="atan">tan⁻¹</string>
    <string name="diez_x">10ˣ</string>
    <string name="e_x">eˣ</string>
    <string name="x_cuadrado">x²</string>
    <string name="raiz_n">ʸ√x</string>
</resources>